force-app/main/default/objects/Account/fields/Account_Photo__c.field-meta.xml
<CustomField>
    <fullName>Account_Photo__c</fullName>
    <label>Photo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>