force-app/main/default/objects/Account/fields/Allergic_Food__c.field-meta.xml
<CustomField>
    <fullName>Allergic_Food__c</fullName>
    <label>Allergic Food</label>
    <length>25</length>
    <type>Text</type>
</CustomField>