force-app/main/default/objects/Account/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <label>Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>