force-app/main/default/objects/Account/fields/by_Ground_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>by_Ground_Customer_Service__c</fullName>
    <description>Displays the passenger psychological information written by ground service staff</description>
    <label>by Ground Customer Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>