force-app/main/default/objects/Account/fields/by_Sale_and_Marketing__c.field-meta.xml
<CustomField>
    <fullName>by_Sale_and_Marketing__c</fullName>
    <description>Customer Psychology by Sale and Marketing team</description>
    <label>by Sale and Marketing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>