force-app/main/default/objects/Account/fields/Customer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_Id__c</fullName>
    <description>External ID :Firstname, Lastname, Birthdate, Passport/Travel Number</description>
    <externalId>true</externalId>
    <label>Customer External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>