force-app/main/default/objects/Account/fields/Customer_Psychology__c.field-meta.xml
<CustomField>
    <fullName>Customer_Psychology__c</fullName>
    <label>Customer Psychology</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>