force-app/main/default/objects/Account/fields/Diet_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Diet_Preferences__c</fullName>
    <label>Diet Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>