force-app/main/default/objects/Account/fields/Dislike__c.field-meta.xml
<CustomField>
    <fullName>Dislike__c</fullName>
    <label>Dislike (By In-Flight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>