force-app/main/default/objects/Account/fields/Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Rule__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Duplicate Rule</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>