force-app/main/default/objects/Account/fields/Favorite_Drink__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Drink__c</fullName>
    <label>Favorite Drink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>