force-app/main/default/objects/Account/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>