force-app/main/default/objects/Account/fields/FLB__c.field-meta.xml
<CustomField>
    <fullName>FLB__c</fullName>
    <description>Firstname + '_' + Lastname + '_'</description>
    <externalId>true</externalId>
    <label>FLB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>