force-app/main/default/objects/Account/fields/FLE__c.field-meta.xml
<CustomField>
    <fullName>FLE__c</fullName>
    <description>FirstName + '_' + LastName + '_' + Email as ExternalID</description>
    <externalId>true</externalId>
    <label>FLE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>