force-app/main/default/objects/Account/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information (By In-Flight)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>