force-app/main/default/objects/Account/fields/Like__c.field-meta.xml
<CustomField>
    <fullName>Like__c</fullName>
    <label>Like (By In-Flight)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>