force-app/main/default/objects/Account/fields/Local_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Name__c</fullName>
    <externalId>true</externalId>
    <label>Local Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>