force-app/main/default/objects/Account/fields/Mailling_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailling_Address__c</fullName>
    <label>Mailling Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>