force-app/main/default/objects/Account/fields/ROP_Adr_City_Name__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_City_Name__c</fullName>
    <description>ROP address city name :TAIPEI</description>
    <label>ROP Adr City Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>