force-app/main/default/objects/Account/fields/ROP_Adr_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Country_Code__c</fullName>
    <description>ROP address country code :TW</description>
    <label>ROP Adr Country Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>