force-app/main/default/objects/Account/fields/ROP_Adr_Line_1__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Line_1__c</fullName>
    <description>ROP address line 1 :No.14, Lane 302, Alley 1, Ming</description>
    <label>ROP Adr Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>