force-app/main/default/objects/Account/fields/ROP_Adr_Line_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Line_2__c</fullName>
    <description>ROP address line 2 :Chang road, Ban-Chiao City,</description>
    <label>ROP Adr Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>