force-app/main/default/objects/Account/fields/ROP_Adr_Line_3__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Line_3__c</fullName>
    <description>ROP address line 3 :Taipei Hsien, Taiwan. R.O.C.</description>
    <label>ROP Adr Line 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>