force-app/main/default/objects/Account/fields/ROP_Adr_Postal__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Postal__c</fullName>
    <description>ROP address postal code :11000</description>
    <label>ROP Adr Postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>