force-app/main/default/objects/Account/fields/ROP_Adr_Seq_No__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Seq_No__c</fullName>
    <description>ROP address sequence number :Data :781320</description>
    <label>ROP Adr Seq No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>