force-app/main/default/objects/Account/fields/ROP_Adr_Type__c.field-meta.xml
<CustomField>
    <fullName>ROP_Adr_Type__c</fullName>
    <description>ROP address type :Data :BUS</description>
    <label>ROP Adr Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>