force-app/main/default/objects/Account/fields/ROP_Business_Area_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Area_Code_2__c</fullName>
    <label>ROP Business Area Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>