force-app/main/default/objects/Account/fields/ROP_Business_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Area_Code__c</fullName>
    <label>ROP Business Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>