force-app/main/default/objects/Account/fields/ROP_Business_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Country_Code__c</fullName>
    <label>ROP Business Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>