force-app/main/default/objects/Account/fields/ROP_Business_Extension_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Extension_2__c</fullName>
    <label>ROP Business Extension 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>