force-app/main/default/objects/Account/fields/ROP_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROP_Business_Phone__c</fullName>
    <label>Business Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>