force-app/main/default/objects/Account/fields/ROP_Company_Name_1__c.field-meta.xml
<CustomField>
    <fullName>ROP_Company_Name_1__c</fullName>
    <description>ROP company's name 1:R.S.B. Industrial Ltd.</description>
    <label>ROP Company Name 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>