force-app/main/default/objects/Account/fields/ROP_Company_Name_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Company_Name_2__c</fullName>
    <description>ROP company's name 2 :R.S.B. Industrial Ltd.</description>
    <label>ROP Company Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>