force-app/main/default/objects/Account/fields/ROP_Email_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Email_2__c</fullName>
    <label>Email 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>