force-app/main/default/objects/Account/fields/ROP_Fax_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_2__c</fullName>
    <label>ROP Fax 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>