force-app/main/default/objects/Account/fields/ROP_Fax__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax__c</fullName>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>