force-app/main/default/objects/Account/fields/ROP_Fax_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Country_Code__c</fullName>
    <label>ROP Fax Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>