force-app/main/default/objects/Account/fields/ROP_Fax_Extension__c.field-meta.xml
<CustomField>
    <fullName>ROP_Fax_Extension__c</fullName>
    <label>ROP Fax Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>