force-app/main/default/objects/Account/fields/ROP_Home_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Country_Code__c</fullName>
    <label>ROP Home Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>