force-app/main/default/objects/Account/fields/ROP_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>ROP_Home_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>