force-app/main/default/objects/Account/fields/ROP_Interests__c.field-meta.xml
<CustomField>
    <fullName>ROP_Interests__c</fullName>
    <label>Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>