force-app/main/default/objects/Account/fields/ROP_Least_Preferred_Drink__c.field-meta.xml
<CustomField>
    <fullName>ROP_Least_Preferred_Drink__c</fullName>
    <label>Least Preferred Drink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>