force-app/main/default/objects/Account/fields/ROP_Least_Preferred_Food__c.field-meta.xml
<CustomField>
    <fullName>ROP_Least_Preferred_Food__c</fullName>
    <label>Least Preferred Food</label>
    <length>255</length>
    <type>Text</type>
</CustomField>