force-app/main/default/objects/Account/fields/ROP_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile__c</fullName>
    <label>Mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>