force-app/main/default/objects/Account/fields/ROP_Mobile_Area_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Area_Code_2__c</fullName>
    <label>ROP Mobile Area Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>