force-app/main/default/objects/Account/fields/ROP_Mobile_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>ROP_Mobile_Area_Code__c</fullName>
    <label>ROP Mobile Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>