force-app/main/default/objects/Account/fields/ROP_Number__c.field-meta.xml
<CustomField>
    <fullName>ROP_Number__c</fullName>
    <externalId>true</externalId>
    <label>ROP Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>