force-app/main/default/objects/Account/fields/ROP_Seat_Preference__c.field-meta.xml
<CustomField>
    <fullName>ROP_Seat_Preference__c</fullName>
    <label>Seat Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>