force-app/main/default/objects/Account/fields/ROP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ROP_Tier__c</fullName>
    <label>ROP Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>