force-app/main/default/objects/Account/fields/Travel_Document__c.field-meta.xml
<CustomField>
    <fullName>Travel_Document__c</fullName>
    <label>Travel Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>