force-app/main/default/objects/Account/fields/Travel_Document_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Document_Expiry_Date__c</fullName>
    <label>Travel Document Expiry Date</label>
    <type>Date</type>
</CustomField>